# dotfiles

./: #README.org#  .gitmodules  README.org  makefile
deploy/: #README.org#  .#README.org  README.org  aur-packages.txt
deploy/XMonad/: README.md
deploy/XMonad/XBar/: README.md  XBar.cabal  build  cabal.project
deploy/XMonad/XBar/src/: Main.hs
deploy/XMonad/XBar/src/lib/: Colors.hs  Config.hs  Monitors.hs  Util.hs
deploy/XMonad/XBar/utilities/icons/: trayer-padding-80px.xpm
deploy/XMonad/XBar/utilities/icons/music/: music_prev.xpm
deploy/XMonad/XBar/utilities/scripts/: padding-icon
deploy/XMonad/Xwm/: README.md  Xwm.cabal  cabal.project
deploy/arch-pkgs/: .gitignore  aur  custom  dependent  explicit
deploy/arch-pkgs/bull/: bull.db  bull.db.tar.zst  bull.files  bull.files.tar.zst  dmenu-bull-git-5.0.r1.cd3effe-1-x86_64.pkg.tar.zst  dwm-bull-git-6.2.r1782.2c6288d-1-x86_64.pkg.tar.zst  dwm-bull-git-6.2.r1784.ef7f867-1-x86_64.pkg.tar.zst  dwm-bull-git-6.2.r1794.00f17d5-1-x86_64.pkg.tar.zst  dwm-bull-git-6.2.r1797.03b8d44-1-x86_64.pkg.tar.zst  nibbler-bull-git-2.1.6.r3237.057ec91-1-x86_64.pkg.tar.zst  nibbler-bull-git-2.1.6.r3239.8666eb9-1-x86_64.pkg.tar.zst  nnn-bull-git-4.1.r3537.896cc7d-1-x86_64.pkg.tar.zst  nnn-bull-git-4.1.r3547.c482cf54-1-x86_64.pkg.tar.zst  nnn-bull-git-4.1.r3548.8150ea0-1-x86_64.pkg.tar.zst  nnn-bull-git-4.1.r3550.6cd099f-1-x86_64.pkg.tar.zst  nnn-bull-git-4.1.r3550.facdc5fd-1-x86_64.pkg.tar.zst  nnn-bull-git-4.1.r3552.d9db6b04-1-x86_64.pkg.tar.zst  nnn-bull-git-4.1.r3553.c0dceb18-1-x86_64.pkg.tar.zst  slock-bull-git-1.4.r1.5358246-1-x86_64.pkg.tar.zst  slstatus-bull-git-1.0.r13.b606477-1-x86_64.pkg.tar.zst  slstatus-bull-git-1.0.r18.23c418b-1-x86_64.pkg.tar.zst  st-bull-git-0.8.4.r4.1dfbe50-1-x86_64.pkg.tar.zst  surf-bull-git-2.0.r5.e119e92-1-x86_64.pkg.tar.zst  tabbed-bull-git-0.6.r1.1dc0507-1-x86_64.pkg.tar.zst  xdg-xmenu-bull-git-1.0.r12.c6cdad9-1-x86_64.pkg.tar.zst  xmenu-bull-git-4.5.5.r153.20a96bd-1-x86_64.pkg.tar.zst
deploy/arch-repo/: aur-packages.txt
deploy/arch-repo/installation/: README.org
deploy/arch-repo/notes/: README.org
deploy/arch-repo/pacman-packages/: bull-packages.txt  dependent-packages.txt  gtk-packages.txt  programming-packages.txt  x-packages.txt
deploy/arch-repo/pacman-pkgs/: gtk-pkgs.txt
deploy/arch-repo/scripts/: 01_install_packages  02_get_aur_helper  02_get_yay  03_ft_prepare  03_install_from_aur  05_check_stowing  05_stowing
deploy/note/: README.md
deploy/note/pkgs/: XWM.txt  base.txt
deploy/notes/: README.org  note.txt
deploy/notes/files/: locale.conf
deploy/pacman-packages/: bull-packages.txt  endeavouros-packages.txt  ghcAla.txt  gtk-packages.txt  haskell.txt  programming-packages.txt  python-packages.txt  ruby-packages.txt  unwanted-packages.txt  x-packages.txt  xmonad.txt
deploy/pacman-pkgs/: bull-pkgs.txt
deploy/pkgbuilds/: aur-packages.txt
deploy/pkgbuilds/neovim-git/: PKGBUILD
deploy/pkgbuilds/nnn/: PKGBUILD
deploy/unix-programs/: README.org
deploy/unix-programs/dmenu-5.0/: dmenu.c  drw.c
deploy/unix-programs/dwm/: config.def.h
deploy/unix-programs/grub-theme/: README.md
deploy/unix-programs/nnn/: Makefile
deploy/unix-programs/slock/: config.h
deploy/unix-programs/slstatus/: config.h
deploy/unix-programs/st-0.8.4/: config.def.h  st.c  st.h  x.c
deploy/unix-programs/surf/: config.h  surf.c
deploy/unix-programs/tabbed/: config.h
deploy/unix-programs/xdg-xmenu/: xdg-xmenu
emacs/.config/emacs/: emacs_configuration.org  emacs_custom.el  init.el
git/.config/git/: config  ignore
haskell/: .haskeline
haskell/.cabal/: #config#  config
haskell/.config/brittany/: config.yaml
haskell/.ghc/: ghci.conf
haskell/.stack/: config.yaml
mail/.config/abook/: abookrc
mail/.config/neomutt/: neomuttrc
music/.config/mpv/: input.conf
music/.config/ncmpcpp/: bindings  config
neoLua/.config/nvim/: init.lua  (+1 more)
shell/: .zshenv
texlive/.config/: .chktexrc
x-window/.config/: dark_tray.config  light_tray.config  mimeapps.list  picom.conf  stalonetrayrc  wgetrc  xboardrc
x-window/.config/xmonad/: base.hs  build  thinkMonad.cabal  xmonad-config.cabal  xmonad.hs
x-window/.config/xmonad/XMonad/Local/Bindings/: Keys.hs  Mouse.hs  Util.hs
x-window/.config/xmonad/XMonad/Local/Config/: Workspace.hs
x-window/.config/xmonad/XMonad/Local/Layout/: Util.hs
x-window/.config/xmonad/lib/XMonad/Local/Bindings/: BackmeUp.hs  Bind.hs  Keys.hs  Util.hs
x-window/.config/xmonad/lib/XMonad/Local/Config/: Theme.hs  Workspace.hs
x-window/.config/xmonad/lib/XMonad/Local/Layout/: Hook.hs  Tatami.hs  Util.hs
x-window/.config/xmonad/lib/XMonad/Local/Log/: XMobar.hs
x-window/.config/xmonad/lib/XMonad/Local/Manage/: Hook.hs  Util.hs
x-window/.config/xmonad/lib/XMonad/Local/Startup/: Hook.hs
x-window/.xmonad/: .ghci  backup.hs  oldxmonad.hs  xmonad.hs
(+629 files in other folders)
