name:               XBar
version:            0.1.0
cabal-version:      >=1.20
build-type:         Simple
license:            GPL-3
license-file:       LICENSE
copyright:          Copyright (c) 2020 Marco Cantoro
author:             Marco Cantoro <marco dot cantoro92 at outlook dot it>
maintainer:         Marco Cantoro <marco dot cantoro92 at outlook dot it>
stability:          experimental
homepage:           http://xmobar.org
bug-reports:        https://github.com/CantoroMC/dotfiles
synopsis:           XMobar Configuration
description:        Custom build of Xmobar using cabal
category:           System
tested-with:        GHC == 8.10.4
extra-source-files: README.md
                    utilities/scripts/padding-icon
                    utilities/scripts/xmPacman
                    utilities/scripts/xmVolume
                    utilities/icons/battery/idle/*.xpm
                    utilities/icons/battery/off/*.xpm
                    utilities/icons/battery/on/*.xpm
                    utilities/icons/brightness/*.xpm
                    utilities/icons/cpu/*.xpm
                    utilities/icons/music/*.xpm
                    utilities/icons/network/rx/*.xpm
                    utilities/icons/network/tx/*.xpm
                    utilities/icons/ram/*.xpm
                    utilities/icons/separators/*.xpm
                    utilities/icons/temperature/*.xpm
                    utilities/icons/volume/*.xpm
                    utilities/icons/weather/*.xpm


library
  hs-source-dirs:   src/lib
  exposed-modules:  Colors, Config, Monitors, Util
  build-depends:    base, xmobar >= 0.37
  -- other-modules:    Paths_xmobarbarian
  default-language: Haskell2010

executable xbar
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -Werror -fno-warn-missing-signatures
  build-depends:    base >= 4.7
                  , xmobar >= 0.37
                  , XBar
  default-language: Haskell2010
