------------------------------------------------------------------------------
name:          thinkMonad
version:       0.15
synopsis:      XMonad Testing Repository
homepage:      http://xmonad.org
license:       BSD2
license-file:  LICENSE
author:        Marco Cantoro <marco.cantoro92@outlook.it>
maintainer:    Marco Cantoro <marco.cantoro92@outlook.it>
copyright:     Copyright (c) 2016,2017 Peter J. Jones
category:      Graphics
build-type:    Simple
cabal-version: >=1.8
extra-source-files:
  screenlocker.png

description:
  My personal xmonad

------------------------------------------------------------------------------
executable thinkMonad
  main-is: thinkMonad.hs
  ghc-options: -Wall -Werror -fno-warn-missing-signatures
  build-depends: base
               , containers
               , mtl
               , xmonad
               , xmonad-contrib
               , X11
  other-modules: XMonad.Local.Config.Color
               , XMonad.Local.Config.Theme
               , XMonad.Local.Config.Workspace
               , XMonad.Local.Bindings.Util
               , XMonad.Local.Bindings.Bind
               , XMonad.Local.Bindings.Keys
               , XMonad.Local.Bindings.Mouse
               , XMonad.Local.Layout.Util
               , XMonad.Local.Layout.Hook
               , XMonad.Local.Log.XMobar
               , XMonad.Local.Log.Hook
               , XMonad.Local.Manage.Util
               , XMonad.Local.Manage.Hook
               , XMonad.Local.Startup.Hook
               , XMonad.Local.Urgency.Hook
